# EasyResume

./: .gitignore  README.md  config.py  example.html  main.py  models.py  pyproject.toml
examples/: example_about.html  example_education.html  example_prof_practice.html  example_uni_practice.html  examples_add_info.html
static/css/: styles.css
templates/: resume_form.html  resume_template2.html
