[project]
name = "easyresume"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey",email = "alexey.a.chernyshev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "tailwindcss (>=0.0.1,<0.0.2)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "weasyprint (>=64.1,<65.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "markdown (>=3.7,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
